[package]
name = "pagefunction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8"
tokio = { version = "^1", features = ["full"] }
reqwest = {version = "^0.11", features = ["gzip"]}
serde = "^1"
serde_json = "^1"
rand = "0.3"
serde_derive = "^1"
scraper = "^0.18"

